fixed white space to teh right on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 /*---------Colours*/
 
 .bg-color-name-title {
